welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: not found: value niveau
		while (num(x)!=niveau) {
                               ^island:11: error: not found: value niveau
		niveau=niveau+1
                ^